# hs-tei-transform

./: Main.hs  README.md  app.cabal  scotty-starter.nix
Controllers/: Home.hs
Views/: Home.hs  Utils.hs
test-data/: 3020.xml
