name:                app
version:             0.1.0.0
synopsis:            Simple JSON REST API for TEI XML documents
description:         Simple JSON REST API for TEI XML documents
homepage:            https://github.com/JonathanReeve/tei-server
license:             GPL3
author:              Jonathan Reeve
maintainer:          jon.reeve@gmail.com
copyright:           Jonathan Reeve (c) 2018
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

executable app
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  other-modules:       Client.CSS
                       Controllers.Home
                       Views.Home
                       Views.Utils
  build-depends:       base >=4.3.1,
                       wai-extra >=3.0.0,
                       wai-middleware-static,
                       scotty,
                       clay,
                       text,
                       blaze-html,
                       blaze-markup,
                       aeson,
                       xml-conduit
  default-language:    Haskell2010

source-repository head
   type: git
   location: https://github.com/JonathanReeve/tei-server